--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_nav.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_nav.scss
@@ -1,3 +1,4 @@
+/// <reference path="../_variables.scss" />
 /// <reference path="../bs4/scss/bootstrap.scss" />
 
 
@@ -30,7 +31,7 @@
     }
 
     .nav-link {
-        font-size: $font-size-lg;
+        //font-size: $font-size-lg;
         text-transform: uppercase;
         text-align: center;
         position: relative;
