--- a/src/Presentation/SmartStore.Web/Views/PrivateMessages/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/PrivateMessages/Index.cshtml
@@ -10,7 +10,7 @@
     ViewBag.PageTitle = T("PrivateMessages.PrivateMessages").Text;
 }
 
-@Html.SmartStore().TabStrip().Name("pm-tabs").HtmlAttributes(new { @class = "pm-tabs" }).SmartTabSelection(true).Style(TabsStyle.Material).ComponentVersion(BootstrapVersion.V4).Responsive(true, "<md").Items(x =>
+@Html.SmartStore().TabStrip().Name("pm-tabs").HtmlAttributes(new { @class = "pm-tabs" }).SmartTabSelection(false).Style(TabsStyle.Material).Responsive(true, "<md").Items(x =>
 {
     x.Add().Text(@T("PrivateMessages.Inbox"))
         .Content(Html.Action("Inbox", new { page = Model.InboxPage, tab = "inbox" }).ToString())
@@ -19,4 +19,11 @@
     x.Add().Text(@T("PrivateMessages.SentItems"))
         .Content(Html.Action("SentItems", new { page = Model.SentItemsPage, tab = "sent" }).ToString())
         .Selected(Model.SentItemsTabSelected);
-})
+}).TabContentHeaderContent(TabContentHeader()).ComponentVersion(BootstrapVersion.V4).Fade(false)
+
+@helper TabContentHeader()
+{{
+	<a href="javascript:void()" class="btn btn-success btn-no-border btn-icon offcanvas-closer rounded-0" title="@T("Common.Close")">
+		<i class="fa fa-2x fa-lg fa-angle-left"></i>
+	</a>
+}}
