--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -784,9 +784,6 @@ a.pretty-link {
 @include media-breakpoint-down(sm) {
     .nav-collapsible {
         position: relative;
-        border-top: 1px solid #ddd;
-        border-bottom: 1px solid #ddd;
-        margin-top: -1px;
 
         .nav-toggler { 
             position: relative;
@@ -815,10 +812,8 @@ a.pretty-link {
 }
 
 @include media-breakpoint-up(md) { 
-    .nav-collapsible {
-        .nav-collapse {
-            display: block !important;
-            height: auto !important;
-        }
+    .nav-collapsible .nav-collapse {
+        display: block !important;
+        height: auto !important;
     }
 }
