--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -517,11 +517,11 @@ a.pretty-link {
 }
 
 .alert > *:first-child {
-	margin-top: 0;
+	margin-top: 0 !important;
 }
 
 .alert > *:last-child {
-	margin-bottom: 0;
+	margin-bottom: 0 !important;
 }
 
 
