--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/_CheckoutAttributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/_CheckoutAttributes.cshtml
@@ -9,7 +9,7 @@
 	}
 }
 
-<div class="checkout-attributes card card-block">
+<div class="cart-checkout-attributes">
 	@foreach (var attribute in Model)
 	{
 		Html.RenderPartial("ChoiceTemplates/Choice", attribute);
